Small fix of split pane spacing

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,52 +18,40 @@ body {
 
 .split-pane {
     height: calc(100vh - 64px) !important;
+    /* cancel-out container-fluid's padding so that the resizer spans
+       to viewport edges */
+    margin-left: -15px;
+    margin-right: -15px;
 }
 
 .vh-pane-left,
 .vh-pane-right {
     height: calc(100vh - 64px);
-}
-
-.vh-pane-left {
-    padding-right: 15px;
-}
-
-.vh-pane-right {
-    padding-left: 15px;
+    padding: 0 15px;
 }
 
 [data-type="Resizer"] {
     width: 12px !important;
 }
 
-@media all and (max-width: 991.9px) {
-    .split-pane {
-        /* cancel-out container-fluid's padding so that the resizer spans
-           to viewport edges */
-        margin-left: -15px;
-        margin-right: -15px;
-    }
-
-    [data-type="Resizer"] {
-        width: 100% !important;
-        height: 12px !important;
-    }
-    
+@media all and (max-width: 991.9px) {    
     .vh-pane-left,
     .vh-pane-right {
         height: 100%;
     }
 
     .vh-pane-left {
-        padding-left: 15px;
         padding-bottom: 15px;
     }
 
     .vh-pane-right {
         padding-top: 15px;
-        padding-right: 15px;
         min-height: 100%;
+    }
+
+    [data-type="Resizer"] {
+        width: 100% !important;
+        height: 12px !important;
     }
 }
 
